@@ -9,6 +9,7 @@
   - Note: this breaks API compatibility.  Be sure to recompile all dependent code after updating difxio.
 * Fix merging of tables containing model extensions when different scans have different subsets of antennas
 * New utility: tabulatedelays.  Will make a list of evaluated delay polynomials every 24 seconds (on the usual grid of model points).  Delays and rates are printed.
+* New function: evaluateDifxAntennaClock
 
 3.4.0
 * Fix X/Y polarization issue
